permanent scrollbar to avoid content jump

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,8 @@ body, html {
 }
 
 body {
-  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%)
+  background: linear-gradient(55deg, rgba(225, 230, 252, .3) 40%, rgba(212, 254, 252, .3) 80%), radial-gradient(circle, #fbf0fe 14%, #f2eff3 42%, #dbeffa 80%);
+  overflow-y: scroll;
 }
 
 ul, ol {
